[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "code-viz"
version = "0.1.1"
description = "Local desktop dependency graph viewer for code repositories."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
code-viz = "code_viz.cli:main"

